--- a/src/view/index.html
+++ b/src/view/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
+  <h1>文档编译演示</h1>
   <div id="app">
     <input type="text" b-value="message" />
     <input type="text" b-value="message" />
